@@ -224,7 +224,7 @@ public class CmsUpdateDBCmsUsers extends A_CmsUpdateDBPart {
             String setUserDateCreated = readQuery(QUERY_SET_USER_DATECREATED);
             List<Object> param = new ArrayList<Object>();
             // Set the creation date to the current time
-            param.add(new Long(System.currentTimeMillis()));
+            param.add(Long.valueOf(System.currentTimeMillis()));
 
             dbCon.updateSqlStatement(setUserDateCreated, null, param);
         } else {
@@ -294,7 +294,7 @@ public class CmsUpdateDBCmsUsers extends A_CmsUpdateDBPart {
         params.add("allWebusersFromUpgrade6to7");
         params.add(
             "This group was created by the OpenCms Upgrade Wizard to facilitate the handling of former called WebUsers, can be deleted if needed.");
-        params.add(new Integer(0));
+        params.add(Integer.valueOf(0));
         params.add("/");
         dbCon.updateSqlStatement(sql, null, params);
         return id;
