@@ -132,6 +132,7 @@ import org.opencms.workplace.threads.A_CmsProgressThread;
 
 import java.lang.reflect.Proxy;
 import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.Collection;
 import java.util.Collections;
 import java.util.Comparator;
@@ -1258,7 +1259,7 @@ public final class CmsDriverManager implements I_CmsEventListener {
     public void cmsEvent(CmsEvent event) {
 
         if (LOG.isDebugEnabled()) {
-            LOG.debug(Messages.get().getBundle().key(Messages.LOG_CMS_EVENT_1, new Integer(event.getType())));
+            LOG.debug(Messages.get().getBundle().key(Messages.LOG_CMS_EVENT_1, Integer.valueOf(event.getType())));
         }
 
         I_CmsReport report;
@@ -1384,7 +1385,7 @@ public final class CmsDriverManager implements I_CmsEventListener {
         // fire a resource modification event
         Map<String, Object> data = new HashMap<String, Object>(2);
         data.put(I_CmsEventListener.KEY_RESOURCE, destination);
-        data.put(I_CmsEventListener.KEY_CHANGE, new Integer(CHANGED_ACCESSCONTROL));
+        data.put(I_CmsEventListener.KEY_CHANGE, Integer.valueOf(CHANGED_ACCESSCONTROL));
         OpenCms.fireCmsEvent(new CmsEvent(I_CmsEventListener.EVENT_RESOURCE_MODIFIED, data));
     }
 
@@ -2740,7 +2741,7 @@ public final class CmsDriverManager implements I_CmsEventListener {
         report.println(Messages.get().container(Messages.RPT_START_DELETE_VERSIONS_0), I_CmsReport.FORMAT_HEADLINE);
         if (versionsToKeep >= 0) {
             report.println(
-                Messages.get().container(Messages.RPT_START_DELETE_ACT_VERSIONS_1, new Integer(versionsToKeep)),
+                Messages.get().container(Messages.RPT_START_DELETE_ACT_VERSIONS_1, Integer.valueOf(versionsToKeep)),
                 I_CmsReport.FORMAT_HEADLINE);
 
             List<I_CmsHistoryResource> resources = getHistoryDriver(dbc).getAllNotDeletedEntries(dbc);
@@ -2769,7 +2770,7 @@ public final class CmsDriverManager implements I_CmsEventListener {
                     int deleted = getHistoryDriver(dbc).deleteEntries(dbc, histResource, versionsToKeep, -1);
 
                     report.print(
-                        Messages.get().container(Messages.RPT_VERSION_DELETING_1, new Integer(deleted)),
+                        Messages.get().container(Messages.RPT_VERSION_DELETING_1, Integer.valueOf(deleted)),
                         I_CmsReport.FORMAT_NOTE);
                     report.print(org.opencms.report.Messages.get().container(org.opencms.report.Messages.RPT_DOTS_0));
                     report.println(
@@ -2797,12 +2798,14 @@ public final class CmsDriverManager implements I_CmsEventListener {
                 report.println(
                     Messages.get().container(
                         Messages.RPT_START_DELETE_DEL_VERSIONS_2,
-                        new Integer(versionsDeleted),
+                        Integer.valueOf(versionsDeleted),
                         new Date(timeDeleted)),
                     I_CmsReport.FORMAT_HEADLINE);
             } else {
                 report.println(
-                    Messages.get().container(Messages.RPT_START_DELETE_DEL_VERSIONS_1, new Integer(versionsDeleted)),
+                    Messages.get().container(
+                        Messages.RPT_START_DELETE_DEL_VERSIONS_1,
+                        Integer.valueOf(versionsDeleted)),
                     I_CmsReport.FORMAT_HEADLINE);
             }
             List<I_CmsHistoryResource> resources = getHistoryDriver(dbc).getAllDeletedEntries(dbc);
@@ -2831,7 +2834,7 @@ public final class CmsDriverManager implements I_CmsEventListener {
                     int deleted = getHistoryDriver(dbc).deleteEntries(dbc, histResource, versionsDeleted, timeDeleted);
 
                     report.print(
-                        Messages.get().container(Messages.RPT_VERSION_DELETING_1, new Integer(deleted)),
+                        Messages.get().container(Messages.RPT_VERSION_DELETING_1, Integer.valueOf(deleted)),
                         I_CmsReport.FORMAT_NOTE);
                     report.print(org.opencms.report.Messages.get().container(org.opencms.report.Messages.RPT_DOTS_0));
                     report.println(
@@ -4766,8 +4769,8 @@ public final class CmsDriverManager implements I_CmsEventListener {
                 thread.setDescription(
                     org.opencms.workplace.commons.Messages.get().getBundle().key(
                         org.opencms.workplace.commons.Messages.GUI_PROGRESS_PUBLISH_STEP1_2,
-                        new Integer(count),
-                        new Integer(publishResources.size())));
+                        Integer.valueOf(count),
+                        Integer.valueOf(publishResources.size())));
             }
 
             CmsResource checkResource = itCheckList.next();
@@ -5788,7 +5791,7 @@ public final class CmsDriverManager implements I_CmsEventListener {
         data.put(I_CmsEventListener.KEY_RESOURCE, resource);
         data.put(
             I_CmsEventListener.KEY_CHANGE,
-            new Integer(changedProjectLastModified ? CHANGED_PROJECT : NOTHING_CHANGED));
+            Integer.valueOf(changedProjectLastModified ? CHANGED_PROJECT : NOTHING_CHANGED));
         data.put(I_CmsEventListener.KEY_SKIPINDEX, Boolean.TRUE);
         OpenCms.fireCmsEvent(new CmsEvent(I_CmsEventListener.EVENT_RESOURCE_MODIFIED, data));
     }
@@ -8619,7 +8622,7 @@ public final class CmsDriverManager implements I_CmsEventListener {
         // fire a resource modification event
         Map<String, Object> data = new HashMap<String, Object>(2);
         data.put(I_CmsEventListener.KEY_RESOURCE, resource);
-        data.put(I_CmsEventListener.KEY_CHANGE, new Integer(CHANGED_ACCESSCONTROL));
+        data.put(I_CmsEventListener.KEY_CHANGE, Integer.valueOf(CHANGED_ACCESSCONTROL));
         OpenCms.fireCmsEvent(new CmsEvent(I_CmsEventListener.EVENT_RESOURCE_MODIFIED, data));
     }
 
@@ -8898,7 +8901,7 @@ public final class CmsDriverManager implements I_CmsEventListener {
             // only the resource was modified
             Map<String, Object> data = new HashMap<String, Object>(2);
             data.put(I_CmsEventListener.KEY_RESOURCE, resource);
-            data.put(I_CmsEventListener.KEY_CHANGE, new Integer(CHANGED_RESOURCE | CHANGED_CONTENT));
+            data.put(I_CmsEventListener.KEY_CHANGE, Integer.valueOf(CHANGED_RESOURCE | CHANGED_CONTENT));
             OpenCms.fireCmsEvent(new CmsEvent(I_CmsEventListener.EVENT_RESOURCE_MODIFIED, data));
         }
     }
@@ -9110,7 +9113,7 @@ public final class CmsDriverManager implements I_CmsEventListener {
         // fire the event
         Map<String, Object> data = new HashMap<String, Object>(2);
         data.put(I_CmsEventListener.KEY_RESOURCE, resource);
-        data.put(I_CmsEventListener.KEY_CHANGE, new Integer(CHANGED_RESOURCE | CHANGED_CONTENT));
+        data.put(I_CmsEventListener.KEY_CHANGE, Integer.valueOf(CHANGED_RESOURCE | CHANGED_CONTENT));
         OpenCms.fireCmsEvent(new CmsEvent(I_CmsEventListener.EVENT_RESOURCE_MODIFIED, data));
     }
 
@@ -9220,7 +9223,7 @@ public final class CmsDriverManager implements I_CmsEventListener {
 
         Map<String, Object> data = new HashMap<String, Object>(2);
         data.put(I_CmsEventListener.KEY_RESOURCE, resource);
-        data.put(I_CmsEventListener.KEY_CHANGE, new Integer(CHANGED_RESOURCE | CHANGED_CONTENT));
+        data.put(I_CmsEventListener.KEY_CHANGE, Integer.valueOf(CHANGED_RESOURCE | CHANGED_CONTENT));
         OpenCms.fireCmsEvent(new CmsEvent(I_CmsEventListener.EVENT_RESOURCE_MODIFIED, data));
     }
 
@@ -9325,7 +9328,7 @@ public final class CmsDriverManager implements I_CmsEventListener {
         // fire the event
         Map<String, Object> data = new HashMap<String, Object>(2);
         data.put(I_CmsEventListener.KEY_RESOURCE, resource);
-        data.put(I_CmsEventListener.KEY_CHANGE, new Integer(CHANGED_TIMEFRAME));
+        data.put(I_CmsEventListener.KEY_CHANGE, Integer.valueOf(CHANGED_TIMEFRAME));
         OpenCms.fireCmsEvent(new CmsEvent(I_CmsEventListener.EVENT_RESOURCE_MODIFIED, data));
     }
 
@@ -9370,7 +9373,7 @@ public final class CmsDriverManager implements I_CmsEventListener {
         // fire the event
         Map<String, Object> data = new HashMap<String, Object>(2);
         data.put(I_CmsEventListener.KEY_RESOURCE, resource);
-        data.put(I_CmsEventListener.KEY_CHANGE, new Integer(CHANGED_LASTMODIFIED));
+        data.put(I_CmsEventListener.KEY_CHANGE, Integer.valueOf(CHANGED_LASTMODIFIED));
         OpenCms.fireCmsEvent(new CmsEvent(I_CmsEventListener.EVENT_RESOURCE_MODIFIED, data));
     }
 
@@ -9414,7 +9417,7 @@ public final class CmsDriverManager implements I_CmsEventListener {
         // fire the event
         Map<String, Object> data = new HashMap<String, Object>(2);
         data.put(I_CmsEventListener.KEY_RESOURCE, resource);
-        data.put(I_CmsEventListener.KEY_CHANGE, new Integer(CHANGED_TIMEFRAME));
+        data.put(I_CmsEventListener.KEY_CHANGE, Integer.valueOf(CHANGED_TIMEFRAME));
         OpenCms.fireCmsEvent(new CmsEvent(I_CmsEventListener.EVENT_RESOURCE_MODIFIED, data));
     }
 
@@ -9589,7 +9592,7 @@ public final class CmsDriverManager implements I_CmsEventListener {
         // fire change event
         Map<String, Object> data = new HashMap<String, Object>(2);
         data.put(I_CmsEventListener.KEY_RESOURCE, resource);
-        data.put(I_CmsEventListener.KEY_CHANGE, new Integer(CHANGED_RESOURCE));
+        data.put(I_CmsEventListener.KEY_CHANGE, Integer.valueOf(CHANGED_RESOURCE));
         OpenCms.fireCmsEvent(new CmsEvent(I_CmsEventListener.EVENT_RESOURCE_MODIFIED, data));
     }
 
@@ -9706,7 +9709,7 @@ public final class CmsDriverManager implements I_CmsEventListener {
         // fire resource modification event
         Map<String, Object> data = new HashMap<String, Object>(2);
         data.put(I_CmsEventListener.KEY_RESOURCE, resource);
-        data.put(I_CmsEventListener.KEY_CHANGE, new Integer(NOTHING_CHANGED));
+        data.put(I_CmsEventListener.KEY_CHANGE, Integer.valueOf(NOTHING_CHANGED));
         OpenCms.fireCmsEvent(new CmsEvent(I_CmsEventListener.EVENT_RESOURCE_MODIFIED, data));
     }
 
@@ -9942,26 +9945,27 @@ public final class CmsDriverManager implements I_CmsEventListener {
      * @param dbc the db context
      * @param resource the resource to update the relations for
      * @param links the links to consider for updating
+     * @param updateSiblingState if true, sets the state of siblings whose relations have changed to 'changed' (unless they are new or deleted)
      *
      * @throws CmsException if something goes wrong
      *
      * @see CmsSecurityManager#updateRelationsForResource(CmsRequestContext, CmsResource, List)
      */
-    public void updateRelationsForResource(CmsDbContext dbc, CmsResource resource, List<CmsLink> links)
+    public void updateRelationsForResource(
+        CmsDbContext dbc,
+        CmsResource resource,
+        List<CmsLink> links,
+        boolean updateSiblingState)
     throws CmsException {
 
-        deleteRelationsWithSiblings(dbc, resource);
-
-        // build the links again only if needed
-        if ((links == null) || links.isEmpty()) {
-            return;
+        if (links == null) {
+            links = new ArrayList<>();
         }
-        // the set of written relations
-        Set<CmsRelation> writtenRelations = new HashSet<CmsRelation>();
 
         // create new relation information
         I_CmsVfsDriver vfsDriver = getVfsDriver(dbc);
         Iterator<CmsLink> itLinks = links.iterator();
+        Set<CmsRelation> relationsForOriginalResource = new HashSet<>();
         while (itLinks.hasNext()) {
             CmsLink link = itLinks.next();
             if (link.isInternal()) { // only update internal links
@@ -9990,25 +9994,53 @@ public final class CmsDriverManager implements I_CmsEventListener {
                     link.getStructureId(),
                     destPath,
                     link.getType());
+                relationsForOriginalResource.add(originalRelation);
+            }
+        }
+        List<CmsResource> siblings = resource.getSiblingCount() == 1
+        ? Arrays.asList(resource)
+        : readSiblings(dbc, resource, CmsResourceFilter.ALL);
 
-                // do not write twice the same relation
-                if (writtenRelations.contains(originalRelation)) {
-                    continue;
-                }
-                writtenRelations.add(originalRelation);
-
-                // TODO: it would be good to have the link locale to make the relation just to the right sibling
-                // create the relations in content for all siblings
-                Iterator<CmsResource> itSiblings = readSiblings(dbc, resource, CmsResourceFilter.ALL).iterator();
-                while (itSiblings.hasNext()) {
-                    CmsResource sibling = itSiblings.next();
-                    CmsRelation relation = new CmsRelation(
-                        sibling.getStructureId(),
-                        sibling.getRootPath(),
-                        originalRelation.getTargetId(),
-                        originalRelation.getTargetPath(),
-                        link.getType());
+        for (CmsResource sibling : siblings) {
+            // For each sibling, we determine which 'defined in content' relations it SHOULD have,
+            // and only update the relations if that set differs from the ones it actually has.
+            // If the updateSiblingState flag is set, then for siblings, we update the structure
+            // state to changed (unless the state was 'deleted' or 'new').
+            // This is so that even if the user later publishes only one sibling, the other sibling will still
+            // show up as changed in the GUI, so the user can publish it separately (with its updated relations).
+            Set<CmsRelation> relationsForSibling = relationsForOriginalResource.stream().map(
+                relation -> new CmsRelation(
+                    sibling.getStructureId(),
+                    sibling.getRootPath(),
+                    relation.getTargetId(),
+                    relation.getTargetPath(),
+                    relation.getType())).collect(Collectors.toSet());
+            Set<CmsRelation> existingRelations = new HashSet<>(
+                vfsDriver.readRelations(
+                    dbc,
+                    dbc.currentProject().getUuid(),
+                    sibling,
+                    CmsRelationFilter.TARGETS.filterDefinedInContent()));
+            if (!existingRelations.equals(relationsForSibling)) {
+                vfsDriver.deleteRelations(
+                    dbc,
+                    dbc.currentProject().getUuid(),
+                    sibling,
+                    CmsRelationFilter.TARGETS.filterDefinedInContent());
+                for (CmsRelation relation : relationsForSibling) {
                     vfsDriver.createRelation(dbc, dbc.currentProject().getUuid(), relation);
+                }
+                if (!sibling.getState().isDeleted()
+                    && !sibling.getState().isNew()
+                    && (siblings.size() > 1)
+                    && updateSiblingState) {
+                    sibling.setState(CmsResource.STATE_CHANGED);
+                    vfsDriver.writeResourceState(
+                        dbc,
+                        dbc.currentProject(),
+                        sibling,
+                        CmsDriverManager.UPDATE_STRUCTURE_STATE,
+                        false);
                 }
             }
         }
@@ -10112,7 +10144,7 @@ public final class CmsDriverManager implements I_CmsEventListener {
         // fire a resource modification event
         Map<String, Object> data = new HashMap<String, Object>(2);
         data.put(I_CmsEventListener.KEY_RESOURCE, resource);
-        data.put(I_CmsEventListener.KEY_CHANGE, new Integer(CHANGED_ACCESSCONTROL));
+        data.put(I_CmsEventListener.KEY_CHANGE, Integer.valueOf(CHANGED_ACCESSCONTROL));
         OpenCms.fireCmsEvent(new CmsEvent(I_CmsEventListener.EVENT_RESOURCE_MODIFIED, data));
     }
 
@@ -10301,7 +10333,7 @@ public final class CmsDriverManager implements I_CmsEventListener {
 
         Map<String, Object> data = new HashMap<String, Object>(2);
         data.put(I_CmsEventListener.KEY_RESOURCE, resource);
-        data.put(I_CmsEventListener.KEY_CHANGE, new Integer(CHANGED_CONTENT));
+        data.put(I_CmsEventListener.KEY_CHANGE, Integer.valueOf(CHANGED_CONTENT));
         OpenCms.fireCmsEvent(new CmsEvent(I_CmsEventListener.EVENT_RESOURCE_MODIFIED, data));
 
         return resource;
@@ -10644,7 +10676,7 @@ public final class CmsDriverManager implements I_CmsEventListener {
         m_monitor.clearResourceCache();
         Map<String, Object> data = new HashMap<String, Object>(2);
         data.put(I_CmsEventListener.KEY_RESOURCE, resource);
-        data.put(I_CmsEventListener.KEY_CHANGE, new Integer(CHANGED_RESOURCE));
+        data.put(I_CmsEventListener.KEY_CHANGE, Integer.valueOf(CHANGED_RESOURCE));
         OpenCms.fireCmsEvent(new CmsEvent(I_CmsEventListener.EVENT_RESOURCE_MODIFIED, data));
     }
 
@@ -11844,13 +11876,13 @@ public final class CmsDriverManager implements I_CmsEventListener {
 
         Set<Integer> roleFlags = new HashSet<Integer>();
         // add role flag
-        Integer flags = new Integer(role.getVirtualGroupFlags());
+        Integer flags = Integer.valueOf(role.getVirtualGroupFlags());
         roleFlags.add(flags);
         // collect all child role flags
         Iterator<CmsRole> itChildRoles = role.getChildren(true).iterator();
         while (itChildRoles.hasNext()) {
             CmsRole child = itChildRoles.next();
-            flags = new Integer(child.getVirtualGroupFlags());
+            flags = Integer.valueOf(child.getVirtualGroupFlags());
             roleFlags.add(flags);
         }
         // iterate all groups matching the flags
@@ -11860,7 +11892,7 @@ public final class CmsDriverManager implements I_CmsEventListener {
             CmsGroup group = it.next();
             if (group.isVirtual()) {
                 CmsRole r = CmsRole.valueOf(group);
-                if (roleFlags.contains(new Integer(r.getVirtualGroupFlags()))) {
+                if (roleFlags.contains(Integer.valueOf(r.getVirtualGroupFlags()))) {
                     groups.add(group);
                 }
             }
@@ -12155,7 +12187,8 @@ public final class CmsDriverManager implements I_CmsEventListener {
                 data.put(I_CmsEventListener.KEY_RESOURCE, resource);
                 data.put(
                     I_CmsEventListener.KEY_CHANGE,
-                    new Integer(((attrModified) ? CHANGED_RESOURCE : 0) | ((aceModified) ? CHANGED_ACCESSCONTROL : 0)));
+                    Integer.valueOf(
+                        ((attrModified) ? CHANGED_RESOURCE : 0) | ((aceModified) ? CHANGED_ACCESSCONTROL : 0)));
                 OpenCms.fireCmsEvent(new CmsEvent(I_CmsEventListener.EVENT_RESOURCE_MODIFIED, data));
             }
         }
