@@ -196,7 +196,7 @@ public class JSONArray {
                 case ']':
                 case ')':
                     if (q != c) {
-                        throw x.syntaxError("Expected a '" + new Character(q) + "'");
+                        throw x.syntaxError("Expected a '" + Character.valueOf(q) + "'");
                     }
                     return;
                 default:
@@ -688,7 +688,7 @@ public class JSONArray {
      */
     public JSONArray put(double value) throws JSONException {
 
-        Double d = new Double(value);
+        Double d = Double.valueOf(value);
         JSONObject.testValidity(d);
         put(d);
         return this;
@@ -702,7 +702,7 @@ public class JSONArray {
      */
     public JSONArray put(int value) {
 
-        put(new Integer(value));
+        put(Integer.valueOf(value));
         return this;
     }
 
@@ -751,7 +751,7 @@ public class JSONArray {
      */
     public JSONArray put(int index, double value) throws JSONException {
 
-        put(index, new Double(value));
+        put(index, Double.valueOf(value));
         return this;
     }
 
@@ -767,7 +767,7 @@ public class JSONArray {
      */
     public JSONArray put(int index, int value) throws JSONException {
 
-        put(index, new Integer(value));
+        put(index, Integer.valueOf(value));
         return this;
     }
 
@@ -783,7 +783,7 @@ public class JSONArray {
      */
     public JSONArray put(int index, long value) throws JSONException {
 
-        put(index, new Long(value));
+        put(index, Long.valueOf(value));
         return this;
     }
 
@@ -841,7 +841,7 @@ public class JSONArray {
      */
     public JSONArray put(long value) {
 
-        put(new Long(value));
+        put(Long.valueOf(value));
         return this;
     }
 
