@@ -38,6 +38,7 @@ import org.opencms.file.CmsVfsResourceNotFoundException;
 import org.opencms.file.history.CmsHistoryResourceHandler;
 import org.opencms.flex.CmsFlexCache;
 import org.opencms.flex.CmsFlexController;
+import org.opencms.flex.CmsFlexController.RedirectInfo;
 import org.opencms.flex.CmsFlexRequest;
 import org.opencms.flex.CmsFlexResponse;
 import org.opencms.gwt.shared.CmsGwtConstants;
@@ -89,6 +90,7 @@ import javax.servlet.ServletResponse;
 import javax.servlet.http.HttpServletRequest;
 import javax.servlet.http.HttpServletResponse;
 
+import org.apache.commons.lang3.exception.ExceptionUtils;
 import org.apache.commons.logging.Log;
 
 import com.google.common.base.Splitter;
@@ -220,6 +222,30 @@ public class CmsJspLoader implements I_CmsResourceLoader, I_CmsFlexCacheEnabledL
     }
 
     /**
+     * This method tries to determine whether an exception is thrown by the JSP compiler.
+     *
+     * @param exception the exception to check
+     * @return true if this is likely a Jasper JSP compiler exception
+     */
+    public static boolean isJasperCompilerException(Throwable exception) {
+
+        if (exception == null) {
+            return false;
+        }
+
+        for (Throwable t: ExceptionUtils.getThrowableList(exception)) {
+            if (t.getClass().getName().equals("org.apache.jasper.JasperException")) {
+                for (StackTraceElement elem : t.getStackTrace()) {
+                    if (elem.getClassName().startsWith("org.apache.jasper.compiler.")) {
+                        return true;
+                    }
+                }
+            }
+        }
+        return false;
+    }
+
+    /**
      * @see org.opencms.configuration.I_CmsConfigurationParameterHandler#addConfigurationParameter(java.lang.String, java.lang.String)
      */
     public void addConfigurationParameter(String paramName, String paramValue) {
@@ -312,6 +338,9 @@ public class CmsJspLoader implements I_CmsResourceLoader, I_CmsFlexCacheEnabledL
             if ((oldController != null) && (controller != null)) {
                 // update "date last modified"
                 oldController.updateDates(controller.getDateLastModified(), controller.getDateExpires());
+                if (controller.getRedirectInfo() != null) {
+                    oldController.setRedirectInfo(controller.getRedirectInfo());
+                }
                 // reset saved controller
                 CmsFlexController.setController(req, oldController);
             }
@@ -1033,7 +1062,7 @@ public class CmsJspLoader implements I_CmsResourceLoader, I_CmsFlexCacheEnabledL
                         // this is a non "on-demand" static export request, don't write to the response stream
                         req.setAttribute(
                             CmsRequestUtil.HEADER_OPENCMS_EXPORT,
-                            new Long(controller.getDateLastModified()));
+                            Long.valueOf(controller.getDateLastModified()));
                     } else if (controller.isTop()) {
                         // process headers and write output if this is the "top" request/response
                         res.setContentLength(result.length);
@@ -1077,8 +1106,15 @@ public class CmsJspLoader implements I_CmsResourceLoader, I_CmsFlexCacheEnabledL
                 // uncritical, might happen if client (browser) does not wait until end of page delivery
                 LOG.debug(Messages.get().getBundle().key(Messages.LOG_IGNORING_EXC_1, e.getClass().getName()), e);
             }
+        } else if (controller.isTop() && (controller.getRedirectInfo() != null)) {
+            RedirectInfo info = controller.getRedirectInfo();
+            if (info.isPermanent()) {
+                res.setHeader(CmsRequestUtil.HEADER_LOCATION, info.getTarget());
+                res.setStatus(HttpServletResponse.SC_MOVED_PERMANENTLY);
+            } else {
+                res.sendRedirect(info.getTarget());
+            }
         }
-
         return result;
     }
 
