@@ -141,12 +141,12 @@ public class CmsImageCacheCleanupJob implements I_CmsScheduledJob {
             // in case of an error, use maxage of one week
             maxAge = 24f * 7f;
             LOG.error(
-                Messages.get().getBundle().key(Messages.LOG_IMAGE_CACHE_BAD_MAXAGE_2, maxAgeStr, new Float(maxAge)));
+                Messages.get().getBundle().key(Messages.LOG_IMAGE_CACHE_BAD_MAXAGE_2, maxAgeStr, Float.valueOf(maxAge)));
         }
 
         // now perform the image cache cleanup
         int count = cleanImageCache(maxAge);
 
-        return Messages.get().getBundle().key(Messages.LOG_IMAGE_CACHE_CLEANUP_COUNT_1, new Integer(count));
+        return Messages.get().getBundle().key(Messages.LOG_IMAGE_CACHE_CLEANUP_COUNT_1, Integer.valueOf(count));
     }
 }
