@@ -444,7 +444,7 @@ public class CmsSearchIndex extends A_CmsSearchIndex {
                     Messages.get().getBundle().key(
                         Messages.LOG_SEARCH_PRIORITY_TOO_LOW_2,
                         value,
-                        new Integer(Thread.MIN_PRIORITY)));
+                        Integer.valueOf(Thread.MIN_PRIORITY)));
 
             } else if (m_priority > Thread.MAX_PRIORITY) {
                 m_priority = Thread.MAX_PRIORITY;
@@ -452,7 +452,7 @@ public class CmsSearchIndex extends A_CmsSearchIndex {
                     Messages.get().getBundle().key(
                         Messages.LOG_SEARCH_PRIORITY_TOO_HIGH_2,
                         value,
-                        new Integer(Thread.MAX_PRIORITY)));
+                        Integer.valueOf(Thread.MAX_PRIORITY)));
             }
         }
 
@@ -551,7 +551,9 @@ public class CmsSearchIndex extends A_CmsSearchIndex {
         if ((oldDoc != null) && (oldDoc.getFieldValueAsDate(CmsSearchField.FIELD_DATE_CONTENT) != null)) {
             long contentDateIndex = oldDoc.getFieldValueAsDate(CmsSearchField.FIELD_DATE_CONTENT).getTime();
             // now compare the date with the date stored in the resource
-            if (contentDateIndex == resource.getDateContent()) {
+            // we truncate to seconds, since the index stores no milliseconds
+            // and it seems practically irrelevant that a content is updated twice in a second.
+            if ((contentDateIndex / 1000L) == (resource.getDateContent() / 1000L)) {
                 // extract stored content blob from index
                 return CmsExtractionResult.fromBytes(oldDoc.getContentBlob());
             }
@@ -1115,10 +1117,10 @@ public class CmsSearchIndex extends A_CmsSearchIndex {
         if (LOG.isDebugEnabled()) {
             timeTotal += System.currentTimeMillis();
             Object[] logParams = new Object[] {
-                new Long(hits == null ? 0 : hits.totalHits.value),
-                new Long(timeTotal),
-                new Long(timeLucene),
-                new Long(timeResultProcessing)};
+                Long.valueOf(hits == null ? 0 : hits.totalHits.value),
+                Long.valueOf(timeTotal),
+                Long.valueOf(timeLucene),
+                Long.valueOf(timeResultProcessing)};
             LOG.debug(Messages.get().getBundle().key(Messages.LOG_STAT_RESULTS_TIME_4, logParams));
         }
 
@@ -1888,18 +1890,18 @@ public class CmsSearchIndex extends A_CmsSearchIndex {
                 doScoring = true;
             } else if ((sort == CmsSearchParameters.SORT_DATE_CREATED)
                 || (sort == CmsSearchParameters.SORT_DATE_LASTMODIFIED)) {
-                // these default sorts don't need score calculation
-                doScoring = false;
-            } else {
-                // for all non-defaults: check if the score field is present, in that case we must calculate the score
-                SortField[] fields = sort.getSort();
-                for (SortField field : fields) {
-                    if (field == SortField.FIELD_SCORE) {
-                        doScoring = true;
-                        break;
+                    // these default sorts don't need score calculation
+                    doScoring = false;
+                } else {
+                    // for all non-defaults: check if the score field is present, in that case we must calculate the score
+                    SortField[] fields = sort.getSort();
+                    for (SortField field : fields) {
+                        if (field == SortField.FIELD_SCORE) {
+                            doScoring = true;
+                            break;
+                        }
                     }
                 }
-            }
         }
         return doScoring;
     }
