@@ -45,6 +45,7 @@ import org.opencms.ui.A_CmsUI;
 import org.opencms.ui.CmsVaadinUtils;
 import org.opencms.ui.CmsVaadinUtils.PropertyId;
 import org.opencms.ui.apps.Messages;
+import org.opencms.ui.components.OpenCmsTheme;
 import org.opencms.ui.components.fileselect.CmsPathSelectField;
 import org.opencms.util.CmsStringUtil;
 import org.opencms.util.CmsUUID;
@@ -279,7 +280,7 @@ public class CmsSourceSearchForm extends VerticalLayout {
     public void initFormValues(CmsSearchReplaceSettings settings) {
 
         m_siteSelect.setValue(settings.getSiteRoot());
-        m_ignoreSubSites.setValue(new Boolean(settings.ignoreSubSites()));
+        m_ignoreSubSites.setValue(Boolean.valueOf(settings.ignoreSubSites()));
         m_searchType.setValue(settings.getType());
         if (!settings.getPaths().isEmpty()) {
             m_searchRoot.setValue(settings.getPaths().get(0));
@@ -297,7 +298,7 @@ public class CmsSourceSearchForm extends VerticalLayout {
             }
         }
         m_searchPattern.setValue(settings.getSearchpattern());
-        m_ignoreSubSites.setValue(new Boolean(settings.ignoreSubSites()));
+        m_ignoreSubSites.setValue(Boolean.valueOf(settings.ignoreSubSites()));
         if (settings.getType().isContentValuesOnly()) {
             if (settings.getLocale() != null) {
                 OpenCms.getLocaleManager();
@@ -653,6 +654,7 @@ public class CmsSourceSearchForm extends VerticalLayout {
         m_resourceType.setItemCaptionPropertyId(PropertyId.caption);
         m_resourceType.setItemIconPropertyId(PropertyId.icon);
         m_resourceType.setFilteringMode(FilteringMode.CONTAINS);
+        m_resourceType.addStyleName(OpenCmsTheme.TYPE_SELECT);
 
         m_workProject.setNullSelectionAllowed(false);
         IndexedContainer projects = CmsVaadinUtils.getProjectsContainer(A_CmsUI.getCmsObject(), "caption");
